Rename metadata properties param to database and document endpoint
